{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 74,
  "lineage": "5a7e8aa4-acf8-36bb-d087-5936df6b64a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a190898cc762dc4",
            "domain": "vpc",
            "id": "eipalloc-00a190898cc762dc4",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-124-25-58.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.124.25.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:internet-gateway/igw-0610de71d918a666a",
            "id": "igw-0610de71d918a666a",
            "owner_id": "986505030570",
            "tags": {
              "Name": "myVPC-igw"
            },
            "tags_all": {
              "Name": "myVPC-igw"
            },
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a190898cc762dc4",
            "association_id": "eipassoc-09849d4f5d48ed47c",
            "connectivity_type": "public",
            "id": "nat-0059820f1f960886e",
            "network_interface_id": "eni-007b30121c3f89e91",
            "private_ip": "10.0.1.238",
            "public_ip": "3.124.25.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0007ffdc27d528b9b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:route-table/rtb-062c040db33a046f4",
            "id": "rtb-062c040db33a046f4",
            "owner_id": "986505030570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0059820f1f960886e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:route-table/rtb-077290fd928cac3b7",
            "id": "rtb-077290fd928cac3b7",
            "owner_id": "986505030570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0610de71d918a666a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0454291886036e071",
            "route_table_id": "rtb-062c040db33a046f4",
            "subnet_id": "subnet-0498c652b2b77b427"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b9ea91c15efcc3a",
            "route_table_id": "rtb-077290fd928cac3b7",
            "subnet_id": "subnet-0007ffdc27d528b9b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:security-group/sg-00e153a8089283949",
            "description": "Security group for SSH access to the bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e153a8089283949",
            "ingress": [
              {
                "cidr_blocks": [
                  "77.126.22.18/32"
                ],
                "description": "Aleksey HOME",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "986505030570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:security-group/sg-0cea2892d871d594e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cea2892d871d594e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH access from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e153a8089283949"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins_sg",
            "name_prefix": "",
            "owner_id": "986505030570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_sg"
            },
            "tags_all": {
              "Name": "jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:security-group/sg-02e17c632520ceae8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e17c632520ceae8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH access from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e153a8089283949"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "986505030570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx_sg"
            },
            "tags_all": {
              "Name": "nginx_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:security-group/sg-0f6296bf5e36e3f5c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6296bf5e36e3f5c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cea2892d871d594e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e17c632520ceae8"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH access from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e153a8089283949"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web_app_sg",
            "name_prefix": "",
            "owner_id": "986505030570",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_app_sg"
            },
            "tags_all": {
              "Name": "web_app_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.jenkins_sg",
            "aws_security_group.nginx_sg",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:subnet/subnet-0498c652b2b77b427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0498c652b2b77b427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986505030570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:subnet/subnet-0007ffdc27d528b9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0007ffdc27d528b9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "986505030570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "dependencies": [
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devsecops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:vpc/vpc-0235a920ec1a72041",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b2547c2e7402a1e",
            "default_route_table_id": "rtb-080b1b30ec0316e9b",
            "default_security_group_id": "sg-0aa784bc20987677b",
            "dhcp_options_id": "dopt-0deaf43f8562e1945",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0235a920ec1a72041",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080b1b30ec0316e9b",
            "owner_id": "986505030570",
            "tags": {
              "Name": "DevSecOpsVPC"
            },
            "tags_all": {
              "Name": "DevSecOpsVPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:vpc-endpoint/vpce-0880d7a623ff458da",
            "dns_entry": [
              {
                "dns_name": "vpce-0880d7a623ff458da-fmy9y4lo.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0880d7a623ff458da-fmy9y4lo-eu-central-1a.api.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "api.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z00636451HPPVLS7QDYTZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0880d7a623ff458da",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0566ff7ddc93b898a"
            ],
            "owner_id": "986505030570",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aa784bc20987677b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0498c652b2b77b427"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:vpc-endpoint/vpce-0241c34135f3afcc4",
            "dns_entry": [
              {
                "dns_name": "vpce-0241c34135f3afcc4-fyg4wgig.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0241c34135f3afcc4-fyg4wgig-eu-central-1a.dkr.ecr.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z05669402F9G63D344O87"
              },
              {
                "dns_name": "*.dkr.ecr.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z05669402F9G63D344O87"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0241c34135f3afcc4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-047311272b25c807b"
            ],
            "owner_id": "986505030570",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0aa784bc20987677b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0498c652b2b77b427"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986505030570:vpc-endpoint/vpce-0fb7e1f0d62ce32fd",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "id": "vpce-0fb7e1f0d62ce32fd",
            "owner_id": "986505030570",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-062c040db33a046f4"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0235a920ec1a72041"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.devsecops_vpc"
          ]
        }
      ]
    }
  ]
}